[project]
name = "ssim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.5",
    "scalene>=1.5.50",
    "scikit-image>=0.25.0",
    "tqdm>=4.67.1",
]
[tool.setuptools]
py-modules = []
